updated fundamentals notebook

--- a/python_fundamentals.ipynb
+++ b/python_fundamentals.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "## Getting help\n",
     "\n",
-    "This notebook is designed to give you the skills required to complete the exercises in the course. Hopefully many of you will want to further develop your python skills (it is a very useful language to know, particularly in data science!)\n",
+    "This notebook is designed to give you a basic introduction to Python for the course. Hopefully many of you will want to further develop your python skills (it is a very useful language to know, particularly in data science!)\n",
     "\n",
     "There are lots of resources you can use for help. \n",
     "\n",
@@ -39,7 +39,7 @@
     "\n",
     "https://www.python.org/doc/\n",
     "\n",
-    "But also stack overflow, which you will find after Googling any issue you get stuck on."
+    "But also stack overflow, which you will find after Googling any issue you get stuck on!"
    ]
   },
   {
@@ -296,7 +296,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is our first example of an error message. As you can see, in general python error messages are very helpful, highlighting the problem line, and giving a detailed description. Try fixing the code."
+    "This is our first example of an error message. As you can see, in general python error messages are very helpful, highlighting the problem line, and giving a detailed description. Try fixing the code above by manually casting the integer to a string. \n",
+    "\n",
+    "*Hint: use the `str()` function!*"
    ]
   },
   {
@@ -305,8 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hide\n",
-    "'My favourite number is ' + str(6)"
+    "#try fixing the code!\n"
    ]
   },
   {
@@ -352,9 +353,9 @@
     "* A variable name must start with a letter or the underscore character.\n",
     "* A variable name cannot start with a number.\n",
     "* A variable name can only contain alpha-numeric characters and underscores (A-z, 0-9, and _ )\n",
-    "* Variable names are case-sensitive (age, Age and AGE are three different variables)\n",
+    "* Variable names are case-sensitive (`age`, `Age` and `AGE` are three different variables)\n",
     "\n",
-    "Typically however, we use `camel_case` for variable names.\n",
+    "Typically, we use `camel_case` for variable names with multiple words.\n",
     "\n",
     "Note we can store **any** data type as a variable, and can overwrite them with new values"
    ]
@@ -373,7 +374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can manipulate variables in the same way we did for literal values. We are going to use this to calulate the fuel cost for a car trip. Come up with appropriate values for the `trip_distance`, `fuel economy`, `fuel_price`, and use it to calculate the `fuel_cost` in Francs (think about units!)"
+    "We can manipulate variables in the same way we did for literal values. We are going to use this to calulate the fuel cost for a car trip. Come up with appropriate values for the `trip_distance`, `fuel economy`, `fuel_price`, and use it to calculate the `fuel_cost` in CHF (think about units!)"
    ]
   },
   {
@@ -391,7 +392,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Calculate fuel_cost\n"
+    "# Calculate fuel_cost and store it as a variable\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can display the fuel cost. Remember we need to cast it to a string. If you get an error below, check you are storing the fuel cost as a variable `fuel_cost`!"
    ]
   },
   {
@@ -478,7 +486,9 @@
    "source": [
     "Obviously, conditionals are more useful when we use *boolean operators*!\n",
     "\n",
-    "Let's check if our journey from before is more expensive than the bus:"
+    "Let's check if our journey from before is more expensive than the bus.\n",
+    "\n",
+    "*Hint: we can use the greater than operator `>` and our `fuel_cost` variable from before!*"
    ]
   },
   {
@@ -488,7 +498,7 @@
    "outputs": [],
    "source": [
     "bus_fare = 2.4\n",
-    "# check if the bus is cheaper than the car (fuel cost)\n",
+    "# check if the bus is cheaper than the car (fuel_cost)\n",
     "# and tell the user if so!\n"
    ]
   },
@@ -568,7 +578,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Functions and methods\n",
+    "## Functions\n",
     "\n",
     "In the code above, we have already used several *functions*, including `print()`, `type()`, `int()`, and `float()`. \n",
     "\n",
@@ -645,9 +655,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Methods\n",
+    "\n",
     "Unlike functions, methods are called directly on *objects* (an *instance* of a *class*). \n",
     "\n",
-    "They are connected using a `.`, and like functions, can take arguments inside the round brackets used to call the method.\n",
+    "They are connected to the object using a `.`, and like functions, can take arguments inside the round brackets used to call the method.\n",
     "\n",
     "Their general form is\n",
     "`object.method(arguments)`\n",
