--- a/python_fundamentals.ipynb
+++ b/python_fundamentals.ipynb
@@ -280,7 +280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is needed to concatonate strings with integers (where the dynamic casting would not always be obvious). See the error message below."
+    "This is needed to concatenate strings with integers (where the dynamic casting would not always be obvious). See the error message below."
    ]
   },
   {
