updated notebooks and added 3 and 4

--- a/Solutions/01_python_fundamentals_solution.ipynb
+++ b/Solutions/01_python_fundamentals_solution.ipynb
@@ -15,12 +15,12 @@
     "This notebook introduces the Python programming language. It covers basic topics including:\n",
     "\n",
     "* Literal values & variables\n",
-    "* Condtionals & flow control\n",
+    "* Conditionals & flow control\n",
     "* Functions & methods\n",
     "\n",
     "Have a go at working through the notebook. To run a code cell, just click on it (to see a green box around it) and then press the **Run** button at the top! \n",
     "\n",
-    "Some cells have blank lines for you to complete. There is always a comment tellling you what to do!\n",
+    "Some cells have blank lines for you to complete. There is always a comment telling you what to do!\n",
     "\n",
     "You can also add a new cell by pressing the **+** button."
    ]
@@ -101,7 +101,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate it here\n"
+    "# Calculate it here\n",
+    "366*24*60*60\n",
+""
    ]
   },
   {
@@ -178,7 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also manipulate strings using the addition and multplication operators (*concatenation*)"
+    "We can also manipulate strings using the addition and multiplication operators (*concatenation*)"
    ]
   },
   {
@@ -228,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Boolean are outputted by boolean operators, such as is equal to `==` or greather than `>`. More on that later!"
+    "Boolean are outputted by boolean operators, such as is equal to `==` or greater than `>`. More on that later!"
    ]
   },
   {
@@ -237,7 +239,7 @@
    "source": [
     "### Casting\n",
     "\n",
-    "Python uses *dynamic casting*. This means it will convert between data types on the fly, which makes it very flexible (but can be confusing coming from stricter langages!). We saw this before when we added a `float` and an `int` (and got a float as an output).\n",
+    "Python uses *dynamic casting*. This means it will convert between data types on the fly, which makes it very flexible (but can be confusing coming from stricter languages!). We saw this before when we added a `float` and an `int` (and got a float as an output).\n",
     "\n",
     "Let's try adding a `bool` and an `int`"
    ]
@@ -307,7 +309,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#try fixing the code!\n"
+    "#try fixing the code!\n",
+    "'My favourite number is ' + str(6)\n",
+""
    ]
   },
   {
@@ -355,7 +359,7 @@
     "* A variable name can only contain alpha-numeric characters and underscores (A-z, 0-9, and _ )\n",
     "* Variable names are case-sensitive (`age`, `Age` and `AGE` are three different variables)\n",
     "\n",
-    "Typically, we use `camel_case` for variable names with multiple words.\n",
+    "Typically, we use `snake_case` for variable names with multiple words.\n",
     "\n",
     "Note we can store **any** data type as a variable, and can overwrite them with new values"
    ]
@@ -374,7 +378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can manipulate variables in the same way we did for literal values. We are going to use this to calulate the fuel cost for a car trip. Come up with appropriate values for the `trip_distance`, `fuel economy`, `fuel_price`, and use it to calculate the `fuel_cost` in CHF (think about units!)"
+    "We can manipulate variables in the same way we did for literal values. We are going to use this to calculate the fuel cost for a car trip. Come up with appropriate values for the `trip_distance`, `fuel economy`, `fuel_price`, and use it to calculate the `fuel_cost` in CHF (think about units!)"
    ]
   },
   {
@@ -383,7 +387,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Come up with appropriate values for trip_distance, fuel economy, fuel_price\n"
+    "# Come up with appropriate values for trip_distance, fuel economy, fuel_price\n",
+    "trip_distance = 25 #km\n",
+    "fuel_economy = 36 #miles per UK gallon\n",
+    "fuel_price = 1.67 #CHF per litre\n",
+""
    ]
   },
   {
@@ -392,7 +400,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate fuel_cost and store it as a variable\n"
+    "# Calculate fuel_cost and store it as a variable\n",
+    "fuel_cost = 4.55*fuel_price*trip_distance/(1.6*fuel_economy)\n",
+""
    ]
   },
   {
@@ -435,12 +445,12 @@
    "source": [
     "## Conditionals\n",
     "\n",
-    "Condtionals allow our code to react to values, in order to control the `flow` of our programs.\n",
+    "Conditionals allow our code to react to values, in order to control the `flow` of our programs.\n",
     "\n",
     "The most simple conditional is the `if` statement, which has the following structure\n",
     "\n",
     "```\n",
-    "if <boolean_condtion>:\n",
+    "if <boolean_condition>:\n",
     "    <statement>\n",
     "```\n",
     "\n",
@@ -499,14 +509,17 @@
    "source": [
     "bus_fare = 2.4\n",
     "# check if the bus is cheaper than the car (fuel_cost)\n",
-    "# and tell the user if so!\n"
+    "# and tell the user if so!\n",
+    "if fuel_cost > bus_fare:\n",
+    "    print('It would be cheaper to take the bus!')\n",
+""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that are code doesn't print anything if the fuel cost is lower or equal to the bus fare. We can adress this using `elif` and `else`"
+    "Notice that are code doesn't print anything if the fuel cost is lower or equal to the bus fare. We can address this using `elif` and `else`"
    ]
   },
   {
@@ -533,7 +546,7 @@
     "\n",
     "For example, the integer `0`, float `0.0`, empty string `''`, and `None` are all evaluated as `False`. All other values are evaluated as `True`. \n",
     "\n",
-    "These are known as *truthy* and *falsey* vaues."
+    "These are known as *truthy* and *falsey* values."
    ]
   },
   {
@@ -543,7 +556,7 @@
    "outputs": [],
    "source": [
     "#Try giving name a value and see how the output changes\n",
-    "name = ''\n",
+    "name = 'Tim'\n",
     "if name:\n",
     "    print('Hello ' + name)\n",
     "else:\n",
@@ -556,7 +569,7 @@
    "source": [
     "### Compound conditionals\n",
     "\n",
-    "We can combine condtionals together using the keywords `and` and `or` as well as brackets to form complex conditions"
+    "We can combine conditionals together using the keywords `and` and `or` as well as brackets to form complex conditions"
    ]
   },
   {
@@ -632,7 +645,9 @@
    "outputs": [],
    "source": [
     "num = 5.23447\n",
-    "# try rounding to different numbers of digits\n"
+    "# try rounding to different numbers of digits\n",
+    "round(num,4)\n",
+""
    ]
   },
   {
@@ -648,7 +663,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Try rounding the numbers 1.5, 2.5, 3.5, 4.5\n"
+    "#Try rounding the numbers 1.5, 2.5, 3.5, 4.5\n",
+    "print(round(1.5))\n",
+    "print(round(2.5))\n",
+    "print(round(3.5))\n",
+    "print(round(4.5))\n",
+""
    ]
   },
   {
@@ -675,7 +695,9 @@
    "source": [
     "hi = 'Hello!'\n",
     "print(hi.upper())\n",
-    "#try using lower with hi\n"
+    "#try using lower with hi\n",
+    "print(hi.lower())\n",
+""
    ]
   }
  ],
@@ -695,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
