--- a/Solutions/02_python_further_techniques_solution.ipynb
+++ b/Solutions/02_python_further_techniques_solution.ipynb
@@ -15,7 +15,7 @@
     "This notebook builds from the python fundamentals notebook and introduces some more advanced techniques, which will help improve the quality of your python code.\n",
     "\n",
     "These techniques include:\n",
-    "* Data scructures & indexing\n",
+    "* Data structures & indexing\n",
     "* Loops & iterables\n",
     "* String formatting\n",
     "* List comprehensions\n",
@@ -34,7 +34,7 @@
     "\n",
     "We will discuss three main data structures here, *list*, *tuple*, and *dictionary*. These are the structures you are likely to use most, though there are more!\n",
     "\n",
-    "Easch one uses a different type of brackets:\n",
+    "Each one uses a different type of brackets:\n",
     "\n",
     "1. `list` uses `[]` \n",
     "2. `tuple` uses `()`\n",
@@ -115,7 +115,7 @@
    "source": [
     "Remember that strings were described as lists of characters? We can therefore index strings in the same way.\n",
     "\n",
-    "Try takign a slice of the string `cyc`"
+    "Try taking a slice of the string `cyc`"
    ]
   },
   {
@@ -125,7 +125,9 @@
    "outputs": [],
    "source": [
     "cyc = 'Cycle'\n",
-    "# Take a slice of the first three elements of cyc\n"
+    "# Take a slice of the first three characters of cyc\n",
+    "'Cycle'[:3]\n",
+""
    ]
   },
   {
@@ -141,14 +143,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Take a slice of the first three elements of element 1 of travel_modes\n"
+    "# Take a slice of the first three characters of element 1 of travel_modes\n",
+    "travel_modes[1][:3]\n",
+""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lists are **variable length** and **mutable**, in other words we can change values in a list after making it. \n",
+    "Lists have **variable length** and are **mutable**, in other words we can change values in a list after making it. \n",
     "\n",
     "Let's change the last travel mode to `'Metro'`"
    ]
@@ -159,7 +163,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change the last travel mode to 'Metro'\n"
+    "# Change the last travel mode to 'Metro'\n",
+    "travel_modes[-1] = 'Metro'\n",
+    "travel_modes\n",
+""
    ]
   },
   {
@@ -184,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Like strings, we can concatonate, lists. We can also mix types, and even store lists in lists (endlessly if needed)!"
+    "Like strings, we can concatenate, lists. We can also mix types, and even store lists in lists (endlessly if needed)!"
    ]
   },
   {
@@ -194,7 +201,10 @@
    "outputs": [],
    "source": [
     "other_modes = ['Plane', ['Speed-Boat', 'Ferry'], None, 10]\n",
-    "# create a new_list combining travel_modes and other_modes\n"
+    "# create a new_list combining travel_modes and other_modes\n",
+    "new_list=travel_modes + other_modes\n",
+    "new_list\n",
+""
    ]
   },
   {
@@ -210,7 +220,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#try using a few string methods on new list\n"
+    "#try using a few string methods on new list\n",
+    "new_list.remove(10)\n",
+    "new_list\n",
+""
    ]
   },
   {
@@ -219,7 +232,7 @@
    "source": [
     "### Tuples\n",
     "\n",
-    "Tuples are very similar to lists, except they are **fixed length** and **not mutable**. They are created using round brackets `()`."
+    "Tuples are very similar to lists, except they have **fixed length** and are **not mutable**. They are created using round brackets `()`."
    ]
   },
   {
@@ -284,7 +297,7 @@
    "source": [
     "### Dictionaries\n",
     "\n",
-    "Dictionaries are lists which are indexed by a *keyword* (instead of integer position). As with lists, they are **variable length'** and **mutable**.\n",
+    "Dictionaries are lists which are indexed by a *keyword* (instead of integer position). As with lists, they have **variable length** and are **mutable**.\n",
     "\n",
     "Dictionaries are created using curly brackets `{}`, and take the general form\n",
     "\n",
@@ -297,6 +310,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fuel_cost = 1.8\n",
     "mode_costs = {'Walking': 0, 'Bus': 2.4, 'Car': fuel_cost}\n",
     "mode_costs"
    ]
@@ -315,7 +329,8 @@
    "outputs": [],
    "source": [
     "#try extracting the cost for travelling by car\n",
-    "mode_costs['Car']"
+    "mode_costs['Car']\n",
+""
    ]
   },
   {
@@ -389,7 +404,7 @@
     "Their general structure is similar to `if` statements:\n",
     "\n",
     "    for i in iterable:\n",
-    "        <statement>\n",
+    "        <code_block>\n",
     "        \n",
     "Lists and tuples can be used directly as iterables. \n",
     "\n",
@@ -402,7 +417,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print the first three letters of each mode in travel_modes\n"
+    "# print the first three letters of each mode in travel_modes\n",
+    "for mode in travel_modes:\n",
+    "    print(mode[:3])\n",
+""
    ]
   },
   {
@@ -411,7 +429,7 @@
    "source": [
     "We can also combine loops with if statements. Try printing only the modes longer than 4 characters. \n",
     "\n",
-    "Hint, try using the funcion `len`!"
+    "Hint, try using the function `len`!"
    ]
   },
   {
@@ -420,7 +438,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Only print modes in travel_modes longer than 4 charaters\n"
+    "# Only print modes in travel_modes longer than 4 characters\n",
+    "for mode in travel_modes:\n",
+    "    if len(mode)>4:\n",
+    "        print(mode)\n",
+""
    ]
   },
   {
@@ -440,7 +462,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# use range to print the even numbers between 5 and 15\n"
+    "# use range to print the even numbers between 5 and 15\n",
+    "for i in range(6,15,2):\n",
+    "    print(i)\n",
+""
    ]
   },
   {
@@ -484,7 +509,7 @@
    "source": [
     "## String formatting\n",
     "\n",
-    "As you have seen in the previous noteook, formatting complex strings using concatenation can be quite clumsy.\n",
+    "As you have seen in the previous notebook, formatting complex strings using concatenation can be quite clumsy.\n",
     "\n",
     "Fortunately, there is a much more streamlined method, using the `format` method for strings.\n",
     "\n",
@@ -519,11 +544,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### f-Strings (Python 3.7 or later)\n",
+    "### f-Strings (Python 3.6 or later)\n",
     "\n",
-    "Python 3.7 introduces f-Strings, which make string formatting even more streamlined!\n",
+    "Python 3.6 introduces f-Strings, which make string formatting even more streamlined!\n",
     "\n",
-    "Simply preceed the string with `f`, and then you can fill hte placeholders directly, so that the above string can be replicated with:"
+    "Simply precede the string with `f`, and then you can fill the placeholders directly, so that the above string can be replicated with:"
    ]
   },
   {
@@ -658,7 +683,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The function deinition is started with the keyword `def`. \n",
+    "The function definition is started with the keyword `def`. \n",
     "\n",
     "We then give the function a name (`hello_world`) and specify the inputs it takes inside the brackets (none!). \n",
     "\n",
@@ -708,7 +733,7 @@
    "outputs": [],
    "source": [
     "def epfl_email(first_name, last_name):\n",
-    "    '''Email address generarator, prints <first_name>.<last_name>@epfl.ch'''\n",
+    "    '''Email address generator, prints <first_name>.<last_name>@epfl.ch'''\n",
     "    print(f'{first_name.lower()}.{last_name.lower()}@epfl.ch')\n",
     "\n",
     "epfl_email('Tim', 'Hillel')"
@@ -763,7 +788,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# modify the function to add sld and tld as optional arguments\n"
+    "# modify the function to add sld and tld as optional arguments\n",
+    "def epfl_email(first_name, last_name, sld='epfl', tld='ch'):\n",
+    "    '''Email address generator, prints <first_name>.<last_name>@<sld>.<tld>'''\n",
+    "    print(f'{first_name.lower()}.{last_name.lower()}@{sld}.{tld}')\n",
+    "\n",
+    "epfl_email('Tim', 'Hillel', tld='co.uk')\n",
+""
    ]
   },
   {
@@ -782,7 +813,7 @@
    "outputs": [],
    "source": [
     "def epfl_email(first_name, last_name, sld='epfl', tld='ch'):\n",
-    "    '''Email address generarator, returns <first_name>.<last_name>@<sld>.<tld>'''\n",
+    "    '''Email address generator, returns <first_name>.<last_name>@<sld>.<tld>'''\n",
     "    email_address = f'{first_name.lower()}.{last_name.lower()}@{sld}.{tld}'\n",
     "    return email_address"
    ]
@@ -813,7 +844,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
