fixed typos and added data folder

--- a/Exercises/01_python_fundamentals_exercise.ipynb
+++ b/Exercises/01_python_fundamentals_exercise.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "Some cells have blank lines for you to complete. There is always a comment telling you what to do!\n",
     "\n",
-    "You can also add a new cell by pressing the **+** button."
+    "You can also add a new cell by pressing the **+** button at the top of the page."
    ]
   },
   {
@@ -31,15 +31,15 @@
    "source": [
     "## Getting help\n",
     "\n",
-    "This notebook is designed to give you a basic introduction to Python for the course. Hopefully many of you will want to further develop your python skills (it is a very useful language to know, particularly in data science!)\n",
+    "This notebook is designed to give you a basic introduction to Python for the course. Hopefully many of you will want to further develop your Python skills (it is a very useful language to know, particularly in data science!)\n",
     "\n",
     "There are lots of resources you can use for help. \n",
     "\n",
-    "Most importantly, the python documentation!\n",
+    "The most important is the python documentation:\n",
     "\n",
     "https://www.python.org/doc/\n",
     "\n",
-    "But also stack overflow, which you will find after Googling any issue you get stuck on!"
+    "You will also probably make use of stack overflow, which you will find after searching most issues you might get stuck on!"
    ]
   },
   {
@@ -161,7 +161,7 @@
    "source": [
     "### Strings\n",
     "\n",
-    "String literals in python are marked with either single or double quotes (but try be consistent!). They act as a *list* of characters."
+    "String literals in python are marked with either single or double quotes (but you need to be consistent!). They act as a *list* of characters."
    ]
   },
   {
@@ -229,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Boolean are outputted by boolean operators, such as is equal to `==` or greater than `>`. More on that later!"
+    "Boolean values are outputted by boolean operators, such as \"_is equal to_\" `==` or \"_is greater than_\" `>`. More on that later!"
    ]
   },
   {
@@ -281,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is needed to concatenate strings with integers (where the dynamic casting would not always be obvious). See the error message below."
+    "Manual casting is needed to concatenate strings with integers (where the dynamic casting would not always be obvious). See the error message below:"
    ]
   },
   {
@@ -318,7 +318,7 @@
    "source": [
     "## Variables\n",
     "\n",
-    "Up until now, we have not stored any values in memory. We can do this by defining variables. We do not need any keywords, we just need to give the variable a name, and use the assignment operator `=`"
+    "Up until now, we have not stored any values in memory. We store values in memory by defining them as variables. We do not need any keywords, we just need to give the variable a name, and use the assignment operator `=`"
    ]
   },
   {
@@ -334,7 +334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice we do not get any output with this cell. This is because we are telling *python* to store the value, and so it doesn't print it. We could access the value by loading it and not storing it again:"
+    "Notice we do not get any output with this cell. This is because we are telling *Python* to store the value, and so Jupyter doesn't need to print anything. We could access the value by loading it and not storing it again:"
    ]
   },
   {
@@ -376,7 +376,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can manipulate variables in the same way we did for literal values. We are going to use this to calculate the fuel cost for a car trip. Come up with appropriate values for the `trip_distance`, `fuel economy`, `fuel_price`, and use it to calculate the `fuel_cost` in CHF (think about units!)"
+    "We can manipulate variables in the same way we did for literal values. We are going to use this to calculate the fuel cost for a car trip. Come up with appropriate values for the `trip_distance`, `fuel_economy`, `fuel_price`, and use it to calculate the `fuel_cost` in CHF (think about units!)"
    ]
   },
   {
@@ -385,7 +385,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Come up with appropriate values for trip_distance, fuel economy, fuel_price\n",
+    "# Come up with appropriate values for trip_distance, fuel_economy, fuel_price\n",
 ""
    ]
   },
@@ -421,7 +421,7 @@
    "source": [
     "### None type\n",
     "\n",
-    "It is sometimes useful for a variable to represent the absence of a value. In Python, this is represented by the value `None`, which has the special type NoneType."
+    "It is sometimes useful for a variable to represent the absence of a value. In Python, this is represented by the value `None`, which has the special type `NoneType`."
    ]
   },
   {
@@ -444,8 +444,8 @@
     "The most simple conditional is the `if` statement, which has the following structure\n",
     "\n",
     "```\n",
-    "if <boolean_condition>:\n",
-    "    <statement>\n",
+    "if <boolean>:\n",
+    "    <operation>\n",
     "```\n",
     "\n",
     "Note the colon and indentation!"
@@ -511,7 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that are code doesn't print anything if the fuel cost is lower or equal to the bus fare. We can address this using `elif` and `else`"
+    "Notice that our code doesn't print anything if the fuel cost is lower or equal to the bus fare. We can address this using `elif` and `else`"
    ]
   },
   {
@@ -534,7 +534,7 @@
    "source": [
     "### Conditionals with NoneType and dynamic casting\n",
     "\n",
-    "Remember that Python can perform dynamic casting between data types? This can allow for very flexible flow control using variables! \n",
+    "Remember that Python can perform dynamic casting between data types. This can allow for very flexible flow control using variables! \n",
     "\n",
     "For example, the integer `0`, float `0.0`, empty string `''`, and `None` are all evaluated as `False`. All other values are evaluated as `True`. \n",
     "\n",
@@ -625,7 +625,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, `int` can take multiple arguments, including an optional argument `ndigits`, which defaults to `None`.\n",
+    "As you can see, `round` can take multiple arguments, including an optional argument `ndigits`, which defaults to `None`.\n",
     "\n",
     "Let's try using the arguments. "
    ]
