--- a/Exercises/02_python_further_techniques_exercise.ipynb
+++ b/Exercises/02_python_further_techniques_exercise.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "## Overview\n",
     "\n",
-    "This notebook builds from the python fundamentals notebook and introduces some more advanced techniques, which will help improve the quality of your python code.\n",
+    "This notebook builds from the Python fundamentals notebook and introduces some more advanced techniques, which will help improve the quality of your Python code.\n",
     "\n",
     "These techniques include:\n",
     "* Data structures & indexing\n",
@@ -671,7 +671,7 @@
     "\n",
     "We then give the function a name (`hello_world`) and specify the inputs it takes inside the brackets (none!). \n",
     "\n",
-    "Next comes the *docstring*. This is simply a string with three quote marks, which tells the user how to use the function. Lets try getting help for our new function:"
+    "Next comes the *docstring*. This is simply a string with triple quotation marks that tells the user how to use the function. Lets try getting help for our new function:"
    ]
   },
   {
