--- a/Exercises/03_numpy_matplotlib_exercise.ipynb
+++ b/Exercises/03_numpy_matplotlib_exercise.ipynb
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With any 2D array, we can reshape it with -1 to get it back to a vector. Try reshaping a2 to a vector (do not store it!)"
+    "With any 2D array, we can reshape it with -1 to get it back to a vector. Try reshaping `a2` to a vector (do not store it!)"
    ]
   },
   {
@@ -138,7 +138,7 @@
     "### Indexing arrays\n",
     "\n",
     "Indexing arrays is similar to lists, except now we can specify a row and a column. \n",
-    "Get the 2nd value in the 3rd row."
+    "Get the 2nd value in the 3rd row of `a2`"
    ]
   },
   {
