--- a/Exercises/04_pandas_exercise.ipynb
+++ b/Exercises/04_pandas_exercise.ipynb
@@ -287,7 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets add a few more columns. Use a list comprehension to create all columns names which contain the string `dur`. \n",
+    "Lets add a few more columns. Use a list comprehension to create a list of all columns names which contain the string `dur`. \n",
     "Append the values `travel_mode` and `distance` to this list, and use it to select these columns from `df` to form a new dataframe `dur_df`.\n",
     "\n",
     "*Hints*: Remember `df.columns` returns a list of the column names, and we can check if something (e.g. a substring or integer) is in something else (e.g. a string or list) using the `in` keyword!"
