updated pandas solution

--- a/Solutions/04_pandas_solution.ipynb
+++ b/Solutions/04_pandas_solution.ipynb
@@ -298,7 +298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets add a few more columns. Use a list comprehension to create all columns names which contain the string `dur`. \n",
+    "Lets add a few more columns. Use a list comprehension to create a list of all columns names which contain the string `dur`. \n",
     "Append the values `travel_mode` and `distance` to this list, and use it to select these columns from `df` to form a new dataframe `dur_df`.\n",
     "\n",
     "*Hints*: Remember `df.columns` returns a list of the column names, and we can check if something (e.g. a substring or integer) is in something else (e.g. a string or list) using the `in` keyword!"
@@ -383,13 +383,13 @@
    "outputs": [],
    "source": [
     "fig, axs = plt.subplots(4, sharex=True, figsize=(8,12))\n",
-    "modes = ['walking', 'cycling', 'pt_total', 'driving']\n",
+    "modes = ['walk', 'cycle', 'pt', 'drive']\n",
     "colors = ['blue', 'orange', 'magenta', 'green']\n",
     "for i, mode in enumerate(modes):\n",
-    "    dur_df[f'dur_{mode}'].plot.density(ax=axs[i], label = mode, color = colors[i])\n",
-    "    axs[i].set_xlim(-0.5,5)\n",
-    "    axs[i].set_ylim(0,4)\n",
+    "    df[df.travel_mode==mode].distance.plot.density(ax=axs[i], color=colors[i], label=mode)\n",
     "    axs[i].legend()\n",
+    "    axs[i].set_ylim(0,.001)\n",
+    "    axs[i].set_xlim(-500,5000)\n",
     "axs[3].set_xlabel('Duration')\n",
     "fig.savefig('tim_density.png')\n",
 ""
